--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/Pierre-Monier/apodWallpaper/issues"
   },
-  "homepage": "https://github.com/Pierre-Monier/apodWallpaper#readme"
+  "homepage": "https://github.com/Pierre-Monier/apodWallpaper#readme",
+  "dependencies": {
+    "http": "0.0.1-security",
+    "https": "^1.0.0",
+    "request": "^2.88.2"
+  }
 }
