--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   },
   "homepage": "https://github.com/Pierre-Monier/apodWallpaper#readme",
   "dependencies": {
-    "http": "0.0.1-security",
-    "https": "^1.0.0",
+    "path": "^0.12.7",
     "request": "^2.88.2"
   }
 }
