--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/Pierre-Monier/apodWallpaper#readme",
   "dependencies": {
     "path": "^0.12.7",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "wallpaper": "^5.0.1"
   },
   "bin": {
     "apod-wallpaper": "./cli.js"
